// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Display/ListRecord ImgRecord smoke-test 1`] = `
<div class="_list-detail_9np8i_325">
  <div class="_list-detail__img-wrapper_9np8i_330">
    <img src="https://github.com/noriyuki-shimizu/front-ui-parts/blob/main/src/assets/img/nature.jpg?raw=true"
         alt="nature"
         width="100%"
         height="100%"
    >
  </div>
  <div class="_body_9np8i_339 _body--shift-right_9np8i_343">
    <article class="_body__container_9np8i_351">
      <header class="_body__header_9np8i_354">
        ヘッダー
      </header>
      <h2 class="_body__title_9np8i_359">
        タイトル
      </h2>
      <div class="_body__description-wrapper_9np8i_364">
        <p class="_body__description_9np8i_364">
          ここに説明文を記述します。
        </p>
      </div>
      <footer class="_body__footer_9np8i_376">
        フッター
      </footer>
    </article>
  </div>
</div>
`;

exports[`Data Display/ListRecord LeftAsideRecord smoke-test 1`] = `
<div class="_list-detail_9np8i_325">
  <div class="_body_9np8i_339">
    <div class="_body__left-aside_9np8i_346">
      <span style="font-size: 40px;">
        😄
      </span>
    </div>
    <article class="_body__container_9np8i_351">
      <header class="_body__header_9np8i_354">
        ヘッダー
      </header>
      <h2 class="_body__title_9np8i_359">
        タイトル
      </h2>
      <div class="_body__description-wrapper_9np8i_364">
        <p class="_body__description_9np8i_364">
          ここに説明文を記述します。
        </p>
      </div>
      <footer class="_body__footer_9np8i_376">
        フッター
      </footer>
    </article>
  </div>
</div>
`;

exports[`Data Display/ListRecord LongTextRecord smoke-test 1`] = `
<div class="_list-detail_9np8i_325">
  <div class="_body_9np8i_339">
    <article class="_body__container_9np8i_351">
      <header class="_body__header_9np8i_354">
        長い文字列のヘッダー長い文字列のヘッダー長い文字列のヘッダー長い文字列のヘッダー長い文字列のヘッダー長い文字列のヘッダー長い文字列のヘッダー長い文字列のヘッダー長い文字列のヘッダー長い文字列のヘッダー
      </header>
      <h2 class="_body__title_9np8i_359">
        長い文字列のタイトル長い文字列のタイトル長い文字列のタイトル長い文字列のタイトル長い文字列のタイトル長い文字列のタイトル長い文字列のタイトル長い文字列のタイトル長い文字列のタイトル長い文字列のタイトル
      </h2>
      <div class="_body__description-wrapper_9np8i_364">
        <p class="_body__description_9np8i_364">
          長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文。長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文長い文字列の説明文。
        </p>
      </div>
      <footer class="_body__footer_9np8i_376">
        長い文字列のフッター長い文字列のフッター長い文字列のフッター長い文字列のフッター長い文字列のフッター長い文字列のフッター長い文字列のフッター長い文字列のフッター長い文字列のフッター長い文字列のフッター
      </footer>
    </article>
  </div>
</div>
`;

exports[`Data Display/ListRecord SimpleRecord smoke-test 1`] = `
<div class="_list-detail_9np8i_325">
  <div class="_body_9np8i_339">
    <article class="_body__container_9np8i_351">
      <header class="_body__header_9np8i_354">
        ヘッダー
      </header>
      <h2 class="_body__title_9np8i_359">
        タイトル
      </h2>
      <div class="_body__description-wrapper_9np8i_364">
        <p class="_body__description_9np8i_364">
          ここに説明文を記述します。
        </p>
      </div>
      <footer class="_body__footer_9np8i_376">
        フッター
      </footer>
    </article>
  </div>
</div>
`;
